2011-08-29  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: two single auxiliary scripts to run/generate wrapped tests
	* tests/config-shell-tests.sh, tests/parallel-tests.sh,
	tests/gen-config-shell-tests, tests/gen-parallel-tests: Deleted,
	their roles taken over by ...
	* tests/wrap-tests.sh, tests/gen-wrap-tests: ... these new more
	general scripts.
	* tests/Makefile.am (EXTRA_DIST): Distribute the new scripts, and
	do not distribute the obsolete ones anymore.
	($(srcdir)/parallel-tests.am, $(srcdir)/config-shell-tests.am): Do
	not include nor generate anymore, they have been superseded by ...
	($(srcdir)/wrap-tests.am): ... this new fragment, automatically
	generated by `gen-wrap-tests'.
	(PTEST_LOG_COMPILER, SHTST_LOG_COMPILER): Delete, they are now
	defined in the new `wrap-tests.am' makefile fragment.
	(TEST_EXTENSIONS): Do not append to it anymore, that is now done
	by the new `wrap-tests.am' makefile fragment above.
	($(parallel_tests:.ptest=.log), $(config_shell_tests:.shtst=.log),
	$(parallel_tests), $(config_shell_tests): Remove this dependencies,
	superseded by ...
	($(wrap_TESTS), $(wrap_LOGS)): ... these ones.
	(MAINTAINERCLEANFILES): Delete, it's not used anymore.
	(TESTS): Do not contain anymore `$(config_shell_tests)' nor
	`$(parallel_tests)', contain `$(wrap_TESTS)' instead, as defined
	by `$(srcdir)/wrap-tests.am'.
	Other related minor edits and reorderings.
	* bootstrap, tests/.gitignore, tests/README: Update.

2011-08-29  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: list of tests placed in a separate Makefile fragment
	This change allows us to easily use make instead of by-hand (and
	more fragile) grepping to extract the list of hand-written tests
	from our Makefiles.
	* bootstrap (BOOTSTRAP_MAKE): New variable.
	Use it to run make in order to extract the list of hand-written
	tests from ...
	* tests/list-of-tests.mk: ... this new file, where they are
	listed in ...