@@ -76,6 +76,7 @@ for var in \
   using_tap \
   parallel_tests \
   am_create_testdir \
+  am_tap_implementation \
   test_prefer_config_shell \
   original_AUTOMAKE \
   original_ACLOCAL \
