@@ -91,6 +91,24 @@ get_list_for_shtst ()
 defines_for_shtst='--define test_prefer_config_shell "yes"'
 add_wrapper_type "shtst"
 
+# Tests on tap support should be run with both the perl and awk
+# implementations of the TAP driver.
+get_list_for_pltap ()
+{
+  {
+    grep -l '[ /]tap-setup\.sh'  $*;
+    grep -l '^fetch_tap_driver$' $*;
+    grep -l '^fetch_tap_driver ' $*;
+    grep -l ' fetch_tap_driver$' $*;
+    grep -l ' fetch_tap_driver ' $*;
+  } | LC_ALL=C sort -u \
+    | while read tst; do
+        grep "am_tap_implementation=" $tst >/dev/null || echo $tst
+      done
+}
+defines_for_pltap='--define am_tap_implementation "perl"'
+add_wrapper_type "pltap"
+
 echo '## Generated by gen-wrapped-tests.  DO NOT EDIT.'
 echo 'wrap_TESTS ='
 echo 'wrap_LOGS ='
