@@ -24,7 +24,7 @@ am_create_testdir=no
 set -x
 exec 5>&1
 
-plan_ 16 # Two times the number of variable names in $vars.
+plan_ 18 # Two times the number of variable names in $vars.
 
 vars='
   me
@@ -32,6 +32,7 @@ vars='
   required
   using_tap
   am_create_testdir
+  am_tap_implementation
   test_prefer_config_shell
   original_AUTOMAKE
   original_ACLOCAL
