@@ -1,5 +1,16 @@
 2011-08-29  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	tests: use both perl and awk implementations for tests on TAP
+	* tests/gen-wrap-tests (get_list_for_pltap): New function, gets
+	the list of tests that check the Automake TAP support.
+	($defines_for_pltap): New variable.
+	($wrapper_type_list): Add "pltap".
+	* tests/defs-static.in: Check that `$am_tap_implementation' is
+	not exported in the environment.
+	* tests/self-check-env-sanitize.tap: Update.
+
+2011-08-29  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	tests: two single auxiliary scripts to run/generate wrapped tests
 	* tests/config-shell-tests.sh, tests/parallel-tests.sh,
 	tests/gen-config-shell-tests, tests/gen-parallel-tests: Deleted,
